--- a/src/components/search-box/search-box.styles.css
+++ b/src/components/search-box/search-box.styles.css
@@ -19,10 +19,9 @@
   padding: 1rem 2rem;
   border-radius: 999px;
 
-  background-color: rgba(255, 255, 255, 0.06);
+  background-color: rgb(11, 4, 4);
   border: 1px solid rgba(255, 255, 255, 0.10);
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
-
   transition: all 0.2s ease;
 }
 
